# permaswap_lp_icp_poc

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/permaswap_lp_backend/: Cargo.toml  permaswap_lp_backend.did
src/permaswap_lp_backend/src/: lib.rs
